--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.390.0",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
