--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-charts-enterprise": "^9.3.1",
+    "ag-charts-react": "^9.3.1",
     "ag-grid-react": "^31.3.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.2.3",
