--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.11",
