--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.19",
-    "@mui/x-date-pickers": "^7.6.2",
+    "@mui/material": "^5.15.20",
+    "@mui/x-date-pickers": "^7.7.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ag-charts-enterprise": "^9.3.1",
     "ag-charts-react": "^9.3.1",
     "ag-grid-react": "^31.3.2",
+    "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.11",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.390.0",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
