--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-apexcharts": "^1.4.1",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
+    "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
