--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "d3": "^7.9.0",
     "dayjs": "^1.11.11",
     "formik": "^2.4.6",
