--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ag-grid-react": "^31.3.2",
     "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "d3": "^7.9.0",
     "dayjs": "^1.11.11",
@@ -32,6 +32,7 @@
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
