--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.0.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4"
   },
